# buddy

./: Cargo.toml  LICENSE  README.md
docs/: FAQ.md
res/: scale.py
src/: cli.rs  error.rs  main.rs  parse.rs  render.rs
src/config/: cli.rs  default.rs  mod.rs
src/render/: helpers.rs  mod.rs  sprite.rs  state.rs
