[package]
name = "buddy"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk4 = { version = "0.8.2", features = ["v4_12"] }
gtk4-layer-shell = "0.3.0"
gio = "0.19.5"
gdk4 = "0.8.2"
glib = "0.19.6"
rand = "0.8.5"
clap = { version = "4.5.4", features = ["derive"] }
clap-num = "1.1.1"
signal-hook = "0.3.17"
